Move FallingLeaves & Cursor component to default layout, fix overflow

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -49,7 +49,9 @@ body {
   align-items: center;
   text-align: center;
   flex-direction: column;
-  padding: 20px;
+  padding: 40px 30px;
+  max-width: 1100px;
+  overflow: hidden;
 }
 
 section {
@@ -120,7 +122,7 @@ ul {
   font-size: 25px;
 }
 .inner-container {
-  padding: 30px;
+  padding: 40px 30px;
   min-height: calc(100vh - 40px);
   overflow: hidden;
   max-width: 1100px;
